kubernetes/apps/network/nas/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nas
spec:
  type: ExternalName
  externalName: nas.home.lan
  ports:
    - name: https
      port: 5001
      targetPort: 5001
      appProtocol: https
